# playbook_executor

./: .env.example  .gitignore  README.md  hosts  main.py  prod_setup.sh  pyproject.toml  test_setup.sh
data/: test.yaml
playbooks/: test.yaml
src/: config.py  parser.py  runner.py  schema.py
tests/: conftest.py  test_parser.py  test_runner.py
